fixed a bug with control.date computing the resulting timestamp incorrectly; improved CMS bookmarklet to enable directly jumping to the content asset in prails when clicking the square
--HG--
extra : convert_revision : svn%3A814373f1-6757-f048-7203-0cfca3d650a3/trunk%40255

--- a/src/templates/main/css/main.css
+++ b/src/templates/main/css/main.css
@@ -4,6 +4,7 @@
 
 span.langhelper {
 	display: block;
+	cursor: pointer;
 	position: absolute;
 	width: 10px;
 	height: 10px;
